Time: 2 ms (46.83%), Space: 44.6 MB (15.53%) - LeetHub